GPU subdivision: Crash when switch to UV editor or unwarpping with 'Display Stretch' overlay #96338

Closed
opened 2022-03-11 15:54:55 +01:00 by Dan McLaughlin · 18 comments

System Information
Operating system: Win 11
Graphics card: 3090

Blender Version
Broken: 3.1
Worked: 3.0.1

Short description of error

Crash when changing to UV Editor

Exact steps for others to reproduce the error

  1. Click on the "UV Editing" tab

It might be related to having the GPU SubD enabled in preferences, looking at the crash log. In this case I have a file which has a SubD and displace, with the SubD first in the stack (not last) as shown (or it might be the USD system). Click on the UV Editing tab and crash.

Crash log with the stack trace included


Stack trace:
blender.exe         :0x00007FF71380E6E0  usdBlender__pxrReserved__::SdfLayerStateDelegateBase::IsDirty
blender.exe         :0x00007FF713655050  draw_subdiv_build_edituv_stretch_angle_buffer
blender.exe         :0x00007FF713698120  blender::draw::mesh_buffer_cache_create_requested_subdiv
blender.exe         :0x00007FF7136539D0  draw_subdiv_create_requested_buffers
blender.exe         :0x00007FF713654850  DRW_create_subdivision
blender.exe         :0x00007FF713680EC0  DRW_mesh_batch_cache_create_requested
blender.exe         :0x00007FF713677C30  drw_batch_cache_generate_requested
blender.exe         :0x00007FF713651B90  drw_engines_cache_populate
blender.exe         :0x00007FF71364DDC0  DRW_draw_render_loop_2d_ex
blender.exe         :0x00007FF713F45DA0  image_main_region_draw
blender.exe         :0x00007FF71395D1D0  ED_region_do_draw
blender.exe         :0x00007FF713555DE0  wm_draw_window_offscreen
blender.exe         :0x00007FF713555C30  wm_draw_window
blender.exe         :0x00007FF713555730  wm_draw_update
blender.exe         :0x00007FF71352FE30  WM_main
blender.exe         :0x00007FF7131903C0  main
blender.exe         :0x00007FF71885E824  __scrt_common_main_seh
KERNEL32.DLL        :0x00007FFD3B3D54D0  BaseThreadInitThunk
ntdll.dll           :0x00007FFD3C444830  RtlUserThreadStart

blender.crash.txt
Friday_11-March-2022_06.43_01.blend

**System Information** Operating system: Win 11 Graphics card: 3090 **Blender Version** Broken: 3.1 Worked: 3.0.1 **Short description of error** Crash when changing to UV Editor **Exact steps for others to reproduce the error** 1) Click on the "UV Editing" tab It might be related to having the GPU SubD enabled in preferences, looking at the crash log. In this case I have a file which has a SubD and displace, with the SubD first in the stack (not last) as shown (or it might be the USD system). Click on the UV Editing tab and crash. Crash log with the stack trace included ``` Stack trace: blender.exe :0x00007FF71380E6E0 usdBlender__pxrReserved__::SdfLayerStateDelegateBase::IsDirty blender.exe :0x00007FF713655050 draw_subdiv_build_edituv_stretch_angle_buffer blender.exe :0x00007FF713698120 blender::draw::mesh_buffer_cache_create_requested_subdiv blender.exe :0x00007FF7136539D0 draw_subdiv_create_requested_buffers blender.exe :0x00007FF713654850 DRW_create_subdivision blender.exe :0x00007FF713680EC0 DRW_mesh_batch_cache_create_requested blender.exe :0x00007FF713677C30 drw_batch_cache_generate_requested blender.exe :0x00007FF713651B90 drw_engines_cache_populate blender.exe :0x00007FF71364DDC0 DRW_draw_render_loop_2d_ex blender.exe :0x00007FF713F45DA0 image_main_region_draw blender.exe :0x00007FF71395D1D0 ED_region_do_draw blender.exe :0x00007FF713555DE0 wm_draw_window_offscreen blender.exe :0x00007FF713555C30 wm_draw_window blender.exe :0x00007FF713555730 wm_draw_update blender.exe :0x00007FF71352FE30 WM_main blender.exe :0x00007FF7131903C0 main blender.exe :0x00007FF71885E824 __scrt_common_main_seh KERNEL32.DLL :0x00007FFD3B3D54D0 BaseThreadInitThunk ntdll.dll :0x00007FFD3C444830 RtlUserThreadStart ``` [blender.crash.txt](https://archive.blender.org/developer/F12921464/blender.crash.txt) [Friday_11-March-2022_06.43_01.blend](https://archive.blender.org/developer/F12921467/Friday_11-March-2022_06.43_01.blend)
Author

Added subscriber: @DrMc

Added subscriber: @DrMc

#97753 was marked as duplicate of this issue

#97753 was marked as duplicate of this issue

#97657 was marked as duplicate of this issue

#97657 was marked as duplicate of this issue
Author

Yes I can confirm that with turning off the GPU SubD in preferences the crash doesn't occur.

Yes I can confirm that with turning off the GPU SubD in preferences the crash doesn't occur.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I cannot reproduce this with either the latest stable or current development versions of Blender:

Please try the latest daily build: https://builder.blender.org/download/


Operating system: macOS-12.2-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Apple 4.1 Metal - 76.3

I cannot reproduce this with either the latest stable or current development versions of Blender: Please try the latest daily build: https://builder.blender.org/download/ --- Operating system: `macOS-12.2-arm64-arm-64bit 64 Bits` Graphics card: `Apple M1 Apple 4.1 Metal - 76.3`

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

I can confirm that switching to UV edit results in a crash in this file. @mano-wii, maybe GPU subdivision is disabled on you card for some reason.

I can confirm that switching to UV edit results in a crash in this file. @mano-wii, maybe GPU subdivision is disabled on you card for some reason.
Author

Thanks for checking @kevindietrich - it's consistent and I've seen it with other files too, I've been puzzling as to why this wasn't reproduced.

Thanks for checking @kevindietrich - it's consistent and I've seen it with other files too, I've been puzzling as to why this wasn't reproduced.
Author

Oh - I can see the likely problem, @mano-wii is on a Mac. Those machines are so different from PC's and Linux that they aren't always the best bug verification platforms.

Oh - I can see the likely problem, @mano-wii is on a Mac. Those machines are so different from PC's and Linux that they aren't always the best bug verification platforms.
Philipp Oeser changed title from Crash when switch to UV editor: 3.1 USDBlender SubD stack to GPU subdivision: Crash when switch to UV editor 2022-04-12 16:55:17 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Talked to @kevindietrich , setting to High prio (since it is a bug in a new feature according to the playbook

Talked to @kevindietrich , setting to High prio (since it is a bug in a new feature according to the [playbook ](https://wiki.blender.org/wiki/Process/Bug_Reports/Triaging_Playbook)
Philipp Oeser changed title from GPU subdivision: Crash when switch to UV editor to GPU subdivision: Crash when switch to UV editor or unwarpping with 'Display Stretch' overlay 2022-04-27 16:26:36 +02:00
Member

Added subscriber: @krieghof

Added subscriber: @krieghof

Added subscriber: @TimTips

Added subscriber: @TimTips

This issue was referenced by 947f8ba300

This issue was referenced by 947f8ba300090027304680c624c6257c41417a6b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-05-03 18:02:29 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96338
No description provided.